[package]
name = "reassociate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio = { version = "^1", features = ["macros"] }
strum = "0.24.1"
strum_macros = "0.24"
sqlx = { version = "0.6.3", features = ["runtime-async-std-rustls", "sqlite", "offline"] }
tui = { version = "0.14", default-features = false, features = ['crossterm'] }
async-std = "1.12.0"
futures-util = "0.3.28"
futures = "*"
# crossterm = { version = "0.19" }
