[package]
name = "reassociate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealdb = { version = "1.0.0-beta.9+20230402", features = ["rustls", "kv-rocksdb", "kv-mem"] }
tui = { version = "0.14", default-features = false, features = ['crossterm'] }
crossterm = { version = "0.19" }
chrono = "0.4"
# async-std = "1.12.0"
async-trait = "0.1.68"
tokio = { version = "1.28.1", features = ["full"] }
